Bug 445304 - KRunner does not find KInfoCenter KCMs by their X-KDE-Keywords
Summary: KRunner does not find KInfoCenter KCMs by their X-KDE-Keywords
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-11 00:12 UTC by Nate Graham
Modified: 2022-01-13 19:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-11-11 00:12:39 UTC
The Device Info KCM's .desktop file has:

X-KDE-Keywords=device,devices,disk,drive,processor,cpu

However if I search for any of these terms, KRunner does not find it--except for when I search for "device", but I assume that's because it appears in the KCM's name.

This works fine for System Settings KCMs, but appears to not work for KInfoCenter KCMs.
Comment 1 Alexander Lohnau 2022-01-11 06:24:07 UTC
Confirmed, though I don't see that it only affects KInfoCenter KCMs

>but I assume that's because it appears in the KCM's name.

Correct. I think this fell under the wheels when porting the querying away from KServiceTypeTrader.
Comment 2 Bug Janitor Service 2022-01-12 19:54:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/111
Comment 3 Nate Graham 2022-01-13 19:19:19 UTC
Git commit a08ce248a750c53a75212d68436f20fc7ec84a4e by Nate Graham, on behalf of Alexander Lohnau.
Committed on 13/01/2022 at 19:17.
Pushed by ngraham into branch 'master'.

systemsettings runner: Consider KCM keywords for querying
FIXED-IN: 5.24

M  +12   -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/commit/a08ce248a750c53a75212d68436f20fc7ec84a4e
Comment 4 Nate Graham 2022-01-13 19:26:12 UTC
Git commit 7b706e507e15135cc1f18aef3e307c6a151ce487 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 13/01/2022 at 19:26.
Pushed by ngraham into branch 'Plasma/5.24'.

systemsettings runner: Consider KCM keywords for querying
FIXED-IN: 5.24


(cherry picked from commit a08ce248a750c53a75212d68436f20fc7ec84a4e)

M  +12   -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/commit/7b706e507e15135cc1f18aef3e307c6a151ce487