systemsettings runner: Consider KCM keywords for querying

BUG: 445304
FIXED-IN: 5.24